# pokename_generator

./: README.md  pyproject.toml
src/: generate.py  model.py  train.py
src/runs/names0/: events.out.tfevents.1614271786.Ruis-MBP.79886.0  events.out.tfevents.1614271796.Ruis-MBP.79963.0  events.out.tfevents.1614272041.Ruis-MBP.80189.0  events.out.tfevents.1614272060.Ruis-MBP.80303.0  events.out.tfevents.1614272073.Ruis-MBP.80436.0  events.out.tfevents.1614272185.Ruis-MBP.80632.0  events.out.tfevents.1614272196.Ruis-MBP.80689.0  events.out.tfevents.1614272203.Ruis-MBP.80739.0  events.out.tfevents.1614272273.Ruis-MBP.80883.0  events.out.tfevents.1614272333.Ruis-MBP.81115.0  events.out.tfevents.1614272371.Ruis-MBP.81196.0  events.out.tfevents.1614272375.Ruis-MBP.81248.0  events.out.tfevents.1614272584.Ruis-MBP.81452.0  events.out.tfevents.1614273183.Ruis-MBP.81777.0  events.out.tfevents.1614273915.Ruis-MBP.82100.0  events.out.tfevents.1614273956.Ruis-MBP.82251.0  events.out.tfevents.1614274069.Ruis-MBP.82302.0  events.out.tfevents.1614274317.Ruis-MBP.82420.0  events.out.tfevents.1614274322.Ruis-MBP.82496.0  events.out.tfevents.1614274416.Ruis-MBP.82614.0  events.out.tfevents.1614274423.Ruis-MBP.82665.0  events.out.tfevents.1614275984.Ruis-MBP.82933.0
